--- a/app/src/main/res/drawable/btn_speaker_on.xml
+++ b/app/src/main/res/drawable/btn_speaker_on.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle" android:padding="10dp">
         <!-- you can use any color you want I used here gray color-->
-        <solid android:color="@color/text_secondary"/>
+        <solid android:color="@color/backround"/>
         <corners android:radius="240dp"/>
     </shape>
 </item>
@@ -11,5 +11,6 @@
     android:bottom="24dp"
     android:left="24dp"
     android:right="24dp"
+    android:tint="@color/text_secondary"
     android:drawable="@drawable/ic_speaker_on"/>
 </layer-list>
