--- a/app/src/main/res/drawable/btn_videocam_off.xml
+++ b/app/src/main/res/drawable/btn_videocam_off.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle" android:padding="10dp">
             <!-- you can use any color you want I used here gray color-->
-            <solid android:color="@color/backround"/>
+            <solid android:color="@color/text_secondary"/>
             <corners android:radius="240dp"/>
         </shape>
     </item>
@@ -11,5 +11,5 @@
         android:bottom="24dp"
         android:left="24dp"
         android:right="24dp"
-        android:drawable="@drawable/ic_mic_on"/>
+        android:drawable="@drawable/ic_videocam_off"/>
 </layer-list>
