--- a/app/src/main/res/drawable/btn_videocam_on.xml
+++ b/app/src/main/res/drawable/btn_videocam_on.xml
@@ -11,5 +11,5 @@
         android:bottom="24dp"
         android:left="24dp"
         android:right="24dp"
-        android:drawable="@drawable/ic_mic_on"/>
+        android:drawable="@drawable/ic_videocam_on"/>
 </layer-list>
