--- a/app/src/main/res/layout/activity_call_video.xml
+++ b/app/src/main/res/layout/activity_call_video.xml
@@ -5,10 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backround_dark"
-    tools:context=".activities.CallActivity">
+    tools:context=".activities.CallVideoActivity">
+
+    <FrameLayout
+        android:id="@+id/v_remote"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/v_local"
+        android:layout_width="80dp"
+        android:layout_height="120dp"
+        android:background="@color/black"
+        android:layout_margin="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/ic_flip_camera"
+        android:padding="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_status"
+        android:id="@+id/tv_status_vid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="center"
@@ -33,26 +61,37 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:id="@+id/v_option"
+            android:id="@+id/v_option_vid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <ImageButton
-                android:id="@+id/btn_speaker"
+                android:id="@+id/btn_speaker_vid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@drawable/btn_speaker_off"
                 android:padding="20dp"/>
+            <Space
+                android:layout_width="40dp"
+                android:layout_height="0dp"/>
+            <ImageButton
+                android:id="@+id/btn_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn_videocam_on"
+                android:padding="20dp"/>
 
             <Space
-                android:layout_width="100dp"
+                android:layout_width="40dp"
                 android:layout_height="0dp"/>
 
             <ImageButton
-                android:id="@+id/btn_mute"
+                android:id="@+id/btn_mute_vid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -61,7 +100,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/v_incoming"
+            android:id="@+id/v_incoming_vid"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,7 +109,7 @@
             >
 
             <ImageButton
-                android:id="@+id/btn_reject"
+                android:id="@+id/btn_reject_vid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -82,7 +121,7 @@
                 android:layout_height="0dp"/>
 
             <ImageButton
-                android:id="@+id/btn_answer"
+                android:id="@+id/btn_answer_vid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -90,14 +129,12 @@
                 android:padding="20dp"/>
         </LinearLayout>
         <ImageButton
-            android:id="@+id/btn_end"
+            android:id="@+id/btn_end_vid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_call"
             android:padding="20dp"/>
 
     </LinearLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
