--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
     <color name="backround_button_dark_2">#8E6DEF</color>
     <color name="backround_button_dark_3">#313251</color>
     <color name="green">#4CAF50</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
