--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,25 +6,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.SecondFragment">
-
-    <TextView
-            android:id="@+id/textview_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/button_second"
-    />
-
-    <Button
-            android:id="@+id/button_second"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/previous"
-            app:layout_constraintTop_toBottomOf="@id/textview_second"
+            android:layout_width="match_parent"
+            android:theme="@style/Theme.Fimae.AppBarOverlay"
+    >
+
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:background="@color/text_white"
+                app:popupTheme="@style/Theme.Fimae.AppBarOverlay"
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/chat_second_menu"
+                android:elevation="0dp"
+        >
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal"
+            >
+                <TextView
+                        style="@style/chat_name_appbar_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_name"
+                        android:layout_gravity="center_horizontal"
+                />
+                <TextView
+                        style="@style/chat_status_appbar_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status_is_active"
+                        android:textColor="#0097A7"/>
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+    <ListView
+            android:id="@+id/list_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/appbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:divider="@null"
+            android:dividerHeight="0dp"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
