--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/appbar_layout"
         layout="@layout/appbar_home" />
-
     <LinearLayout
+        android:id="@+id/layout_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appbar_layout">
+        android:padding="10dp">
 
         <!-- Chatting button -->
         <LinearLayout
@@ -27,11 +27,11 @@
             android:background="@drawable/shape_rectangle_boder_radius_pink"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
             android:paddingTop="15dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="15dp">
-
+            android:paddingBottom="15dp"
+            android:focusable="true">
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
@@ -39,7 +39,7 @@
                 app:srcCompat="@drawable/ic_chat_color" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -50,8 +50,7 @@
                     android:gravity="center"
                     android:text="Nhắn tin"
                     android:textColor="@color/text_primary"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    style="@style/bold_16" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -62,7 +61,7 @@
                     <ImageView
                         android:layout_width="6dp"
                         android:layout_height="6dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginEnd="5dp"
                         android:src="@drawable/shape_circle_green" />
 
                     <TextView
@@ -72,8 +71,7 @@
                         android:gravity="center"
                         android:text="592"
                         android:textColor="@color/text_primary"
-                        android:textSize="12sp"
-                        android:textStyle="normal" />
+                        style="@style/regular_12" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -81,8 +79,7 @@
                         android:gravity="center"
                         android:text=" trực tuyến"
                         android:textColor="@color/text_primary"
-                        android:textSize="12sp"
-                        android:textStyle="normal" />
+                        style="@style/regular_12"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -100,10 +97,11 @@
             android:background="@drawable/shape_rectangle_boder_radius_green"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
             android:paddingTop="15dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="15dp">
+            android:paddingBottom="15dp"
+            android:focusable="true">
 
             <ImageView
                 android:layout_width="35dp"
@@ -112,7 +110,7 @@
                 app:srcCompat="@drawable/ic_phone_color" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -123,8 +121,7 @@
                     android:gravity="center"
                     android:text="Gọi điện"
                     android:textColor="@color/text_primary"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    style="@style/bold_16" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -145,8 +142,7 @@
                         android:gravity="center"
                         android:text="592"
                         android:textColor="@color/text_primary"
-                        android:textSize="12sp"
-                        android:textStyle="normal" />
+                        style="@style/regular_12" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -154,10 +150,86 @@
                         android:gravity="center"
                         android:text=" trực tuyến"
                         android:textColor="@color/text_primary"
-                        android:textSize="12sp"
-                        android:textStyle="normal" />
+                        style="@style/regular_12" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <Space android:layout_width="10dp"
+            android:layout_height="match_parent"/>
+
+        <!-- Call video button -->
+        <LinearLayout
+            android:id="@+id/btn_call_video_home"
+            android:clickable="true"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="match_parent"
+            android:background="@drawable/shape_rectangle_boder_radius_purple"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginBottom="10dp"
+                app:srcCompat="@drawable/ic_video_call_color" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Gọi video"
+                    android:textColor="@color/text_primary"
+                    style="@style/bold_16" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="6dp"
+                        android:layout_height="6dp"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/shape_circle_green" />
+
+                    <TextView
+                        android:id="@+id/tv_num_onl_call_video"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="592"
+                        android:textColor="@color/text_primary"
+                        style="@style/regular_12" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text=" trực tuyến"
+                        android:textColor="@color/text_primary"
+                        style="@style/regular_12" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_users"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_user"/>
+</LinearLayout>
