--- a/app/src/main/res/drawable/shape_gender_border_blue.xml
+++ b/app/src/main/res/drawable/shape_gender_border_blue.xml
@@ -1,6 +1,6 @@
 <?xml version ="1.0" encoding ="utf-8"?><!--  Learn More about how to use App Actions: https://developer.android.com/guide/actions/index.html -->
 <shape  xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/backround_button_2"/>
+    <solid android:color="@color/secondary_2"/>
     <corners android:bottomRightRadius="6dp"
              android:bottomLeftRadius="6dp"
              android:topRightRadius="6dp"
