--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -11,12 +11,13 @@
         android:id="@+id/tv_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="center"
         android:layout_margin="10dp"
         android:layout_marginEnd="356dp"
         android:layout_marginBottom="699dp"
+        android:text="center"
         android:textColor="@color/text_white"
         android:textSize="16sp"
+        app:fontFamily="More Fonts..."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/btn_speaker_off"
+                android:background="@drawable/background_btn_speaker_off"
                 android:padding="20dp"/>
 
             <Space
@@ -56,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/btn_mic_on"
+                android:background="@drawable/background_btn_mic_on"
                 android:padding="20dp" />
         </LinearLayout>
 
@@ -74,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/btn_call"
+                android:background="@drawable/background_btn_call"
                 android:padding="20dp" />
 
             <Space
@@ -86,14 +87,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/btn_answer_call"
+                android:background="@drawable/background_btn_answer_call"
                 android:padding="20dp"/>
         </LinearLayout>
         <ImageButton
             android:id="@+id/btn_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_call"
+            android:background="@drawable/background_btn_call"
             android:padding="20dp"/>
 
     </LinearLayout>
