--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -15,6 +15,17 @@
             android:orientation="vertical"
             tools:ignore="UselessParent">
 
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="30dp"
+                android:text="Connecting..."
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textView"
@@ -26,15 +37,15 @@
                 android:id="@+id/et_to"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="20dp" />
+                android:layout_margin="20dp"
+                android:gravity="center"/>
 
             <Button
                 android:id="@+id/btn_call"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:text="Call"
-                android:textColor="#ffffff"
-                app:iconTint="#CDDC39" />
+                android:textColor="#ffffff" />
 
             <Button
                 android:id="@+id/btn_call_video"
@@ -42,19 +53,65 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="Call Video"
-                android:textColor="#ffffff"
-                app:iconTint="#CDDC39" />
+                android:textColor="#ffffff" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_minh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/secondary_4"
+                    android:text="minh" />
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="0dp" />
+
+                <Button
+                    android:id="@+id/btn_hao"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/secondary_4"
+                    android:text="hao" />
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="0dp" />
+
+                <Button
+                    android:id="@+id/btn_anh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/secondary_4"
+                    android:text="anh" />
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="0dp" />
+
+                <Button
+                    android:id="@+id/btn_hien"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/secondary_4"
+                    android:text="hien" />
+            </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Connecting..."
-            android:textColor="@android:color/black"
-            android:textSize="24sp"/>
+        <ImageButton
+            android:id="@+id/btn_back_to_home"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_arrow_left"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:padding="20dp"/>
+
 
 
     </RelativeLayout>
