--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
     <View
         android:id="@+id/boder_top"
         android:layout_width="match_parent"
-        android:layout_height="0.8sp"
+        android:layout_height="0.5sp"
         android:layout_above="@+id/bottom_nav"
-        android:background="@color/text_secondary" />
+        android:background="@color/text_tertiary" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
