--- a/app/src/main/res/layout/appbar_home.xml
+++ b/app/src/main/res/layout/appbar_home.xml
@@ -11,8 +11,8 @@
 
     <ImageButton
         android:id="@+id/btn_setting_home"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/ic_filter"
         android:padding="20dp"/>
 
@@ -22,12 +22,11 @@
         android:layout_weight="1" />
 
     <TextView
-        android:textSize="24sp"
+        style="@style/bold_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="@color/primary_1"
-        android:textStyle="bold"
         android:gravity="center"/>
     <Space
         android:layout_width="0dp"
