--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -15,22 +15,22 @@
             android:theme="@style/Theme.Fimae.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-                app:titleTextColor="@color/text_white"
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:background="@color/text_white"
-                app:popupTheme="@style/Theme.Fimae.PopupOverlay"
-                android:layout_height="?attr/actionBarSize"
-                app:menu="@menu/chat_menu">
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/text_white"
+            app:menu="@menu/chat_menu"
+            app:popupTheme="@style/Theme.Fimae.PopupOverlay"
+            app:titleTextColor="@color/text_white">
+
             <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textStyle="bold"
-                    android:textSize="24sp"
-                    android:textColor="@color/primary_1"
-                    android:layout_gravity="center"
-                    android:id="@+id/toolbar_title"/>
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/app_name"
+                android:textColor="@color/primary_1"
+                style="@style/bold_24" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -51,18 +51,18 @@
             android:gravity="center_vertical"
     >
         <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_search"
-                android:layout_marginEnd="12dp"
+            android:id="@+id/imageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_search"
+            android:layout_marginEnd="12dp"
         />
         <TextView
-                android:layout_width="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/text_secondary"
-                android:layout_height="wrap_content"
-                android:text="Tìm kiếm lịch sử cuộc trò chuyện"
+            android:layout_width="wrap_content"
+            style="@style/regular_14"
+            android:textColor="@color/text_secondary"
+            android:layout_height="wrap_content"
+            android:text="Tìm kiếm lịch sử cuộc trò chuyện"
         />
     </LinearLayout>
     <ListView
