--- a/app/src/main/res/menu/chat_menu.xml
+++ b/app/src/main/res/menu/chat_menu.xml
@@ -3,7 +3,7 @@
 
     <item
             android:id="@+id/action_add_friend"
-            android:icon="@drawable/user_add"
+            android:icon="@drawable/ic_user_add"
             app:showAsAction="ifRoom" android:title="Add chat"/>
 
 </menu>
