--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -46,7 +46,7 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_messages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
