--- a/app/src/main/res/layout/receiver_message.xml
+++ b/app/src/main/res/layout/receiver_message.xml
@@ -20,7 +20,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
     <TextView
-            android:id="@+id/outgoing_msg"
+            android:id="@+id/incoming_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
