--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,106 +2,106 @@
 <resources>
     <!-- Bold -->
     <style name="bold_32">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">32sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_24">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_20">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_18">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_16">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_14">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_12">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="bold_10">
-        <item name="fontFamily">@font/public_sans_bold</item>
+        <item name="fontFamily">@font/publicsans_bold</item>
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <!-- Semi bold-->
     <style name="semi_bold_18">
-        <item name="fontFamily">@font/public_sans_semibold</item>
+        <item name="fontFamily">@font/publicsans_semibold</item>
         <item name="android:textSize">18sp</item>
     </style>
     <style name="semi_bold_16">
-        <item name="fontFamily">@font/public_sans_semibold</item>
+        <item name="fontFamily">@font/publicsans_semibold</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="semi_bold_14">
-        <item name="fontFamily">@font/public_sans_semibold</item>
+        <item name="fontFamily">@font/publicsans_semibold</item>
         <item name="android:textSize">14sp</item>
     </style>
     <style name="semi_bold_12">
-        <item name="fontFamily">@font/public_sans_semibold</item>
+        <item name="fontFamily">@font/publicsans_semibold</item>
         <item name="android:textSize">12sp</item>
     </style>
     <style name="semi_bold_10">
-        <item name="fontFamily">@font/public_sans_semibold</item>
+        <item name="fontFamily">@font/publicsans_semibold</item>
         <item name="android:textSize">10sp</item>
     </style>
     <style name="semi_bold_8">
-        <item name="fontFamily">@font/public_sans_semibold</item>
+        <item name="fontFamily">@font/publicsans_semibold</item>
         <item name="android:textSize">8sp</item>
     </style>
     <!-- Medium -->
     <style name="medium_18">
-        <item name="fontFamily">@font/public_sans_medium</item>
+        <item name="fontFamily">@font/publicsans_medium</item>
         <item name="android:textSize">18sp</item>
     </style>
     <style name="medium_16">
-        <item name="fontFamily">@font/public_sans_medium</item>
+        <item name="fontFamily">@font/publicsans_medium</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="medium_12">
-        <item name="fontFamily">@font/public_sans_medium</item>
+        <item name="fontFamily">@font/publicsans_medium</item>
         <item name="android:textSize">12sp</item>
     </style>
     <style name="medium_10">
-        <item name="fontFamily">@font/public_sans_medium</item>
+        <item name="fontFamily">@font/publicsans_medium</item>
         <item name="android:textSize">10sp</item>
     </style>
     <!-- Regular -->
     <style name="regular_16">
-        <item name="fontFamily">@font/public_sans</item>
+        <item name="fontFamily">@font/publicsans</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="regular_14">
-        <item name="fontFamily">@font/public_sans</item>
+        <item name="fontFamily">@font/publicsans</item>
         <item name="android:textSize">14sp</item>
     </style>
     <style name="regular_12">
-        <item name="fontFamily">@font/public_sans</item>
+        <item name="fontFamily">@font/publicsans</item>
         <item name="android:textSize">12sp</item>
     </style>
     <style name="regular_10">
-        <item name="fontFamily">@font/public_sans</item>
+        <item name="fontFamily">@font/publicsans</item>
         <item name="android:textSize">10sp</item>
     </style>
     <style name="regular_8">
-        <item name="fontFamily">@font/public_sans</item>
+        <item name="fontFamily">@font/publicsans</item>
         <item name="android:textSize">8sp</item>
     </style>
     <!-- Custom font -->
@@ -124,4 +124,8 @@
         <item name="android:background">?android:attr/colorBackground</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
+    <style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@drawable/bottomsheet_background</item>
+    </style>
+
 </resources>
