--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomSheetDialogTheme" >@style/CustomBottomSheetDialog</item>
+
     </style>
+
     <style name="Theme.Fimae.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
