--- a/app/src/main/res/layouts/home/layout/activity_waiting.xml
+++ b/app/src/main/res/layouts/home/layout/activity_waiting.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.WaitingActivity">
     <include
         android:id="@+id/appbar_waiting"
-        layout="@layout/appbar_waiting" />
+        layout="@layout/appbar_connect" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_image_slider"
@@ -16,8 +16,8 @@
         android:layout_height="120dp"
         android:layout_marginBottom="56dp"
         android:paddingStart="120dp"
-        android:paddingTop="10dp"
         android:paddingEnd="120dp"
+        android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/btn_chat_home"
+        android:id="@+id/btn_play"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="74dp"
