--- a/app/src/main/res/layouts/home/layout/appbar_connect.xml
+++ b/app/src/main/res/layouts/home/layout/appbar_connect.xml
@@ -5,8 +5,8 @@
     android:gravity="center"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     android:layout_height="wrap_content"
     android:background="@color/backround_button_dark_1_startColor">
 
@@ -37,21 +37,22 @@
         <ProgressBar
             android:id="@+id/pbTimer"
             android:layout_width="35dp"
-            android:layout_height="match_parent"
+            android:layout_height="35dp"
             android:layout_gravity="center"
             android:indeterminate="false"
             android:layout_marginEnd="10dp"
             style="?android:attr/progressBarStyleHorizontal"
             android:max="100"
-            android:progress="65"
+            android:progress="100"
             android:rotation="0"
             android:background="@drawable/gray_processbar_background"
             android:progressDrawable="@drawable/blue_processbar_background" />
         <TextView
+            android:id="@+id/tv_time_connect"
             style="@style/bold_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="02:20"
+            android:text="03:00"
             android:textColor="@color/white"
             android:gravity="center"/>
     </LinearLayout>
