--- a/app/src/main/res/layouts/home/layout/appbar_waiting.xml
+++ b/app/src/main/res/layouts/home/layout/appbar_waiting.xml
@@ -11,9 +11,9 @@
     android:background="@color/backround_button_dark_1_startColor">
 
     <ImageButton
-        android:id="@+id/btn_zoom_out"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:id="@+id/btn_zoom_out_waiting"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:background="@drawable/ic_compact"
         android:padding="20dp"/>
 
@@ -23,7 +23,7 @@
         android:layout_weight="1" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_title_waiting"
         style="@style/bold_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:layout_weight="1" />
 
     <ImageButton
-        android:id="@+id/btn_close"
+        android:id="@+id/btn_close_waiting"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:background="@drawable/ic_close"
