--- a/app/src/main/res/layouts/home/layout/activity_call_video.xml
+++ b/app/src/main/res/layouts/home/layout/activity_call_video.xml
@@ -7,10 +7,6 @@
     android:background="@drawable/background_gradient"
     tools:context=".activities.CallVideoActivity">
 
-    <include
-        android:id="@+id/appbar_layout"
-        layout="@layout/appbar_connect" />
-
     <FrameLayout
         android:id="@+id/v_remote"
         android:layout_width="match_parent"
@@ -20,21 +16,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <include
+        android:id="@+id/appbar_layout"
+        layout="@layout/appbar_connect" />
+
     <FrameLayout
         android:id="@+id/v_local"
-        android:layout_width="80dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="140dp"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/black"
+        android:background="@drawable/shape_rectangle_border_radius_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appbar_layout" />
 
 
     <ImageButton
         android:id="@+id/btn_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_margin="20dp"
         android:background="@drawable/ic_flip_camera"
         android:padding="20dp"
@@ -45,7 +45,7 @@
         android:id="@+id/tv_status_vid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="center"
+        android:text=""
         android:layout_margin="10dp"
         android:layout_marginEnd="356dp"
         android:layout_marginBottom="699dp"
