Login % Update profile, sơ sơ phần chat

--- a/app/src/main/res/layout/activity_on_chat.xml
+++ b/app/src/main/res/layout/activity_on_chat.xml
@@ -46,6 +46,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintVertical_weight="1"
             app:reverseLayout="false"
             android:id="@+id/list_messages"
             android:layout_width="match_parent"
